--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> <img src="https://images.app.goo.gl/aJE4AU6tfxhHy6hs6" > WOLFSBURG </title>
+    <title>  WOLFSBURG </title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -87,7 +87,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Calendário de Jogos de Futebol</h1>
+        <h1> <img src="https://images.app.goo.gl/aJE4AU6tfxhHy6hs6" > WOLFSBURG </h1>
         <h2>Jogos Agendados</h2>
         <ul id="gameList"></ul>
 
