--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 </head>
 <body>
     <div class="container">
-        <h1> <img src="https://images.app.goo.gl/aJE4AU6tfxhHy6hs6" > WOLFSBURG </h1>
+        <h1> <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f3/Logo-VfL-Wolfsburg.svg/1200px-Logo-VfL-Wolfsburg.svg.png" > WOLFSBURG </h1>
         <h2>Jogos Agendados</h2>
         <ul id="gameList"></ul>
 
