--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
 </head>
 <body>
     <div class="container">
-        <h1> <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f3/Logo-VfL-Wolfsburg.svg/1200px-Logo-VfL-Wolfsburg.svg.png" > WOLFSBURG </h1>
+        <h1>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f3/Logo-VfL-Wolfsburg.svg/1200px-Logo-VfL-Wolfsburg.svg.png" > WOLFSBURG </h1>
         <h2>Jogos Agendados</h2>
         <ul id="gameList"></ul>
 
@@ -137,7 +138,7 @@
                     <td>3</td>
                     <td>1</td>
                     <td>20</td>
-                                       <td>+8</td>
+                    <td>+8</td>
                 </tr>
                 <tr>
                     <td>4</td>
