--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 <body>
     <div class="container">
         <h1>
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f3/Logo-VfL-Wolfsburg.svg/1200px-Logo-VfL-Wolfsburg.svg.png" > WOLFSBURG </h1>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f3/Logo-VfL-Wolfsburg.svg/1200px-Logo-VfL-Wolfsburg.svg.png" alt="Logo do Futebol" > WOLFSBURG </h1>
         <h2>Jogos Agendados</h2>
         <ul id="gameList"></ul>
 
