--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
         }
 
+        h1 img {
+    width: 30px; /* Tamanho da logo */
+    height: 30px; /* Tamanho da logo */
+    margin-right: 10px; /* Espaço entre a logo e o texto */
+         }
+
         h1 {
             text-align: center;
             color: #007A33; /* Cor do Wolfsburg */
