--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
                     <th>Vitórias</th>
                     <th>Empates</th>
                     <th>Derrotas</th>
+                    <th>Pontos</th>
                 </tr>
             </thead>
             <tbody id="bundesligaTable">
@@ -118,6 +119,7 @@
                     <td>8</td>
                     <td>1</td>
                     <td>1</td>
+                    <td>25</td> <!-- 8*3 + 1*1 = 25 -->
                 </tr>
                 <tr>
                     <td>2</td>
@@ -126,22 +128,25 @@
                     <td>7</td>
                     <td>2</td>
                     <td>1</td>
+                    <td>23</td> <!-- 7*3 + 2*1 = 23 -->
                 </tr>
-                <tr>
+                              <tr>
                     <td>3</td>
                     <td><img src="https://via.placeholder.com/30" alt="Time C Logo"> Time C</td>
                     <td>10</td>
                     <td>6</td>
                     <td>3</td>
                     <td>1</td>
+                    <td>21</td> <!-- 6*3 + 3*1 = 21 -->
                 </tr>
-                               <tr>
+                <tr>
                     <td>4</td>
                     <td><img src="https://via.placeholder.com/30" alt="Time D Logo"> Time D</td>
                     <td>10</td>
                     <td>5</td>
                     <td>4</td>
                     <td>1</td>
+                    <td>19</td> <!-- 5*3 + 4*1 = 19 -->
                 </tr>
                 <tr>
                     <td>5</td>
@@ -150,6 +155,7 @@
                     <td>5</td>
                     <td>3</td>
                     <td>2</td>
+                    <td>18</td> <!-- 5*3 + 3*1 = 18 -->
                 </tr>
                 <tr>
                     <td>6</td>
@@ -158,6 +164,7 @@
                     <td>4</td>
                     <td>4</td>
                     <td>2</td>
+                    <td>16</td> <!-- 4*3 + 4*1 = 16 -->
                 </tr>
                 <tr>
                     <td>7</td>
@@ -166,6 +173,7 @@
                     <td>3</td>
                     <td>5</td>
                     <td>2</td>
+                    <td>14</td> <!-- 3*3 + 5*1 = 14 -->
                 </tr>
                 <tr>
                     <td>8</td>
@@ -174,6 +182,7 @@
                     <td>3</td>
                     <td>4</td>
                     <td>3</td>
+                    <td>13</td> <!-- 3*3 + 4*1 = 13 -->
                 </tr>
                 <tr>
                     <td>9</td>
@@ -182,6 +191,7 @@
                     <td>2</td>
                     <td>5</td>
                     <td>3</td>
+                    <td>11</td> <!-- 2*3 + 5*1 = 11 -->
                 </tr>
                 <tr>
                     <td>10</td>
@@ -190,6 +200,7 @@
                     <td>2</td>
                     <td>4</td>
                     <td>4</td>
+                    <td>10</td> <!-- 2*3 + 4*1 = 10 -->
                 </tr>
                 <tr>
                     <td>11</td>
@@ -198,6 +209,7 @@
                     <td>1</td>
                     <td>6</td>
                     <td>3</td>
+                    <td>9</td> <!-- 1*3 + 6*1 = 9 -->
                 </tr>
                 <tr>
                     <td>12</td>
@@ -206,14 +218,16 @@
                     <td>1</td>
                     <td>5</td>
                     <td>4</td>
+                    <td>8</td> <!-- 1*3 + 5*1 = 8 -->
                 </tr>
-                <tr>
+                               <tr>
                     <td>14</td>
                     <td><img src="https://via.placeholder.com/30" alt="Time N Logo"> Time N</td>
                     <td>10</td>
                     <td>1</td>
                     <td>3</td>
                     <td>6</td>
+                    <td>6</td> <!-- 1*3 + 3*1 = 6 -->
                 </tr>
                 <tr>
                     <td>15</td>
@@ -222,6 +236,7 @@
                     <td>1</td>
                     <td>2</td>
                     <td>7</td>
+                    <td>5</td> <!-- 1*3 + 2*1 = 5 -->
                 </tr>
                 <tr>
                     <td>16</td>
@@ -230,6 +245,7 @@
                     <td>0</td>
                     <td>4</td>
                     <td>6</td>
+                    <td>4</td> <!-- 0*3 + 4*1 = 4 -->
                 </tr>
                 <tr>
                     <td>17</td>
@@ -238,14 +254,16 @@
                     <td>0</td>
                     <td>3</td>
                     <td>7</td>
+                    <td>3</td> <!-- 0*3 + 3*1 = 3 -->
                 </tr>
-                               <tr>
+                <tr>
                     <td>18</td>
                     <td><img src="https://via.placeholder.com/30" alt="Time R Logo"> Time R</td>
                     <td>10</td>
                     <td>0</td>
                     <td>2</td>
                     <td>8</td>
+                    <td>2</td> <!-- 0*3 + 2*1 = 2 -->
                 </tr>
             </tbody>
         </table>
