--- a/index.html
+++ b/index.html
@@ -117,167 +117,168 @@
                     <td>1</td>
                     <td><img src="https://via.placeholder.com/30" alt="Time A Logo"> Time A</td>
                     <td>10</td>
-                    <td><input type="number" value="8" onchange="calculatePoints(this)" /></td>
-                    <td><input type="number" value="1" onchange="calculatePoints(this)" /></td>
-                    <td><input type="number" value="1" onchange="calculatePoints(this)" /></td>
-                    <td class="points">25</td> <!-- Inicialmente 25, será atualizado -->
+                    <td>8</td>
+                    <td>1</td>
+                    <td>1</td>
+                    <td>25</td>
                 </tr>
                 <tr>
                     <td>2</td>
                     <td><img src="https://via.placeholder.com/30" alt="Time B Logo"> Time B</td>
                     <td>10</td>
-                    <td><input type="number" value="7" onchange="calculatePoints(this)" /></td>
-                    <td><input type="number" value="2" onchange="calculatePoints(this)" /></td>
-                    <td><input type="number" value="1" onchange="calculatePoints(this)" /></td>
-                                        <td class="points">23</td> <!-- Inicialmente 23, será atualizado -->
+                    <td>7</td>
+                    <td>2</td>
+                    <td>1</td>
+                    <td>23</td>
                 </tr>
                 <tr>
                     <td>3</td>
                     <td><img src="https://via.placeholder.com/30" alt="Time C Logo"> Time C</td>
                     <td>10</td>
-                    <td><input type="number" value="6" onchange="calculatePoints(this)" /></td>
-                    <td><input type="number" value="3" onchange="calculatePoints(this)" /></td>
-                    <td><input type="number" value="1" onchange="calculatePoints(this)" /></td>
-                    <td class="points">21</td> <!-- Inicialmente 21, será atualizado -->
+                    <td>6</td>
+                    <td>2</td>
+                                        <td>6</td>
+                    <td>21</td>
                 </tr>
                 <tr>
                     <td>4</td>
                     <td><img src="https://via.placeholder.com/30" alt="Time D Logo"> Time D</td>
                     <td>10</td>
-                    <td><input type="number" value="5" onchange="calculatePoints(this)" /></td>
-                    <td><input type="number" value="4" onchange="calculatePoints(this)" /></td>
-                    <td><input type="number" value="1" onchange="calculatePoints(this)" /></td>
-                    <td class="points">19</td> <!-- Inicialmente 19, será atualizado -->
+                    <td>5</td>
+                    <td>4</td>
+                    <td>1</td>
+                    <td>19</td>
                 </tr>
                 <tr>
                     <td>5</td>
                     <td><img src="https://via.placeholder.com/30" alt="Time E Logo"> Time E</td>
                     <td>10</td>
-                    <td><input type="number" value="5" onchange="calculatePoints(this)" /></td>
-                    <td><input type="number" value="3" onchange="calculatePoints(this)" /></td>
-                    <td><input type="number" value="2" onchange="calculatePoints(this)" /></td>
-                    <td class="points">18</td> <!-- Inicialmente 18, será atualizado -->
+                    <td>5</td>
+                    <td>3</td>
+                    <td>2</td>
+                    <td>18</td>
                 </tr>
                 <tr>
                     <td>6</td>
                     <td><img src="https://via.placeholder.com/30" alt="Time F Logo"> Time F</td>
                     <td>10</td>
-                    <td><input type="number" value="4" onchange="calculatePoints(this)" /></td>
-                    <td><input type="number" value="4" onchange="calculatePoints(this)" /></td>
-                    <td><input type="number" value="2" onchange="calculatePoints(this)" /></td>
-                    <td class="points">16</td> <!-- Inicialmente 16, será atualizado -->
+                    <td>4</td>
+                    <td>4</td>
+                    <td>2</td>
+                    <td>16</td>
                 </tr>
                 <tr>
                     <td>7</td>
                     <td><img src="https://via.placeholder.com/30" alt="Time G Logo"> Time G</td>
                     <td>10</td>
-                    <td><input type="number" value="3" onchange="calculatePoints(this)" /></td>
-                    <td><input type="number" value="5" onchange="calculatePoints(this)" /></td>
-                    <td><input type="number" value="2" onchange="calculatePoints(this)" /></td>
-                    <td class="points">14</td> <!-- Inicialmente 14, será atualizado -->
+                    <td>3</td>
+                    <td>5</td>
+                    <td>2</td>
+                    <td>14</td>
                 </tr>
                 <tr>
                     <td>8</td>
                     <td><img src="https://via.placeholder.com/30" alt="Time H Logo"> Time H</td>
                     <td>10</td>
-                    <td><input type="number" value="3" onchange="calculatePoints(this)" /></td>
-                    <td><input type="number" value="4" onchange="calculatePoints(this)" /></td>
-                    <td><input type="number" value="3" onchange="calculatePoints(this)" /></td>
-                    <td class="points">13</td> <!-- Inicialmente 13, será atualizado -->
+                    <td>3</td>
+                    <td>4</td>
+                    <td>3</td>
+                    <td>13</td>
                 </tr>
                 <tr>
                     <td>9</td>
                     <td><img src="https://via.placeholder.com/30" alt="Time I Logo"> Time I</td>
                     <td>10</td>
-                    <td><input type="number" value="2" onchange="calculatePoints(this)" /></td>
-                    <td><input type="number" value="5" onchange="calculatePoints(this)" /></td>
-                    <td><input type="number" value="3" onchange="calculatePoints(this)" /></td>
-                    <td class="points">11</td> <!-- Inicialmente 11, será atualizado -->
+                    <td>2</td>
+                    <td>5</td>
+                    <td>3</td>
+                    <td>11</td>
                 </tr>
-                                <tr>
+                <tr>
                     <td>10</td>
                     <td><img src="https://via.placeholder.com/30" alt="Time J Logo"> Time J</td>
                     <td>10</td>
-                    <td><input type="number" value="2" onchange="calculatePoints(this)" /></td>
-                    <td><input type="number" value="4" onchange="calculatePoints(this)" /></td>
-                    <td><input type="number" value="4" onchange="calculatePoints(this)" /></td>
-                    <td class="points">10</td> <!-- Inicialmente 10, será atualizado -->
+                    <td>2</td>
+                    <td>4</td>
+                    <td>4</td>
+                    <td>10</td>
                 </tr>
                 <tr>
                     <td>11</td>
                     <td><img src="https://via.placeholder.com/30" alt="Time K Logo"> Time K</td>
                     <td>10</td>
-                    <td><input type="number" value="1" onchange="calculatePoints(this)" /></td>
-                    <td><input type="number" value="6" onchange="calculatePoints(this)" /></td>
-                    <td><input type="number" value="3" onchange="calculatePoints(this)" /></td>
-                    <td class="points">9</td> <!-- Inicialmente 9, será atualizado -->
+                    <td>1</td>
+                    <td>6</td>
+                    <td>3</td>
+                    <td>9</td>
                 </tr>
                 <tr>
                     <td>12</td>
                     <td><img src="https://via.placeholder.com/30" alt="Time L Logo"> Time L</td>
                     <td>10</td>
-                    <td><input type="number" value="1" onchange="calculatePoints(this)" /></td>
-                    <td><input type="number" value="5" onchange="calculatePoints(this)" /></td>
-                    <td><input type="number" value="4" onchange="calculatePoints(this)" /></td>
-                    <td class="points">8</td> <!-- Inicialmente 8, será atualizado -->
+                    <td>1</td>
+                    <td>5</td>
+                    <td>4</td>
+                    <td>8</td>
+                </tr>
+                <tr>
+                    <td>13</td>
+                    <td><img src="https://via.placeholder.com/30" alt="Time M Logo"> Time M</td>
+                    <td>10</td>
+                    <td>1</td>
+                    <td>3</td>
+                    <td>6</td>
+                    <td>6</td>
                 </tr>
                 <tr>
                     <td>14</td>
                     <td><img src="https://via.placeholder.com/30" alt="Time N Logo"> Time N</td>
                     <td>10</td>
-                    <td><input type="number" value="1" onchange="calculatePoints(this)" /></td>
-                    <td><input type="number" value="3" onchange="calculatePoints(this)" /></td>
-                    <td><input type="number" value="6" onchange="calculatePoints(this)" /></td>
-                    <td class="points">6</td> <!-- Inicialmente 6, será atualizado -->
+                    <td>1</td>
+                    <td>2</td>
+                    <td>7</td>
+                    <td>5</td>
                 </tr>
                 <tr>
                     <td>15</td>
                     <td><img src="https://via.placeholder.com/30" alt="Time O Logo"> Time O</td>
                     <td>10</td>
-                    <td><input type="number" value="1" onchange="calculatePoints(this)" /></td>
-                    <td><input type="number" value="2" onchange="calculatePoints(this)" /></td>
-                    <td><input type="number" value="7" onchange="calculatePoints(this)" /></td>
-                    <td class="points">5</td> <!-- Inicialmente 5, será atualizado -->
+                    <td>1</td>
+                    <td>2</td>
+                                       <td>7</td>
+                    <td>5</td>
                 </tr>
                 <tr>
                     <td>16</td>
                     <td><img src="https://via.placeholder.com/30" alt="Time P Logo"> Time P</td>
                     <td>10</td>
-                    <td><input type="number" value="0" onchange="calculatePoints(this)" /></td>
-                    <td><input type="number" value="4" onchange="calculatePoints(this)" /></td>
-                    <td><input type="number" value="6" onchange="calculatePoints(this)" /></td>
-                    <td class="points">4</td> <!-- Inicialmente 4, será atualizado -->
+                    <td>0</td>
+                    <td>4</td>
+                    <td>6</td>
+                    <td>4</td>
                 </tr>
                 <tr>
                     <td>17</td>
                     <td><img src="https://via.placeholder.com/30" alt="Time Q Logo"> Time Q</td>
                     <td>10</td>
-                    <td><input type="number" value="0" onchange="calculatePoints(this)" /></td>
-                    <td><input type="number" value="3" onchange="calculatePoints(this)" /></td>
-                    <td><input type="number" value="7" onchange="calculatePoints(this)" /></td>
-                    <td class="points">3</td> <!-- Inicialmente 3, será atualizado -->
+                    <td>0</td>
+                    <td>3</td>
+                    <td>7</td>
+                    <td>3</td>
                 </tr>
                 <tr>
-                                       <td>18</td>
+                    <td>18</td>
                     <td><img src="https://via.placeholder.com/30" alt="Time R Logo"> Time R</td>
                     <td>10</td>
-                    <td><input type="number" value="0" onchange="calculatePoints(this)" /></td>
-                    <td><input type="number" value="2" onchange="calculatePoints(this)" /></td>
-                    <td><input type="number" value="8" onchange="calculatePoints(this)" /></td>
-                    <td class="points">2</td> <!-- Inicialmente 2, será atualizado -->
+                    <td>0</td>
+                    <td>2</td>
+                    <td>8</td>
+                    <td>2</td>
                 </tr>
             </tbody>
         </table>
     </div>
     <script>
-        function calculatePoints(input) {
-            const row = input.closest('tr');
-            const wins = row.querySelector('td:nth-child(4) input').value;
-            const draws = row.querySelector('td:nth-child(5) input').value;
-            const points = (wins * 3) + (draws * 1);
-            row.querySelector('.points').textContent = points;
-        }
-
         // Adicione os jogos aqui
         const games = [
             { team1: { name: "Time A", logo: "https://via.placeholder.com/30" }, team2: { name: "Time B", logo: "https://via.placeholder.com/30" }, date: "2023-10-01" },
